# multi_robot_object_tranport

./: README.md
coordination/: package.xml  setup.py
robot_description/: package.xml  setup.py
robot_description/launch/: sim_launch.py
robot_description/robot_description/: object_detector.py
robot_description/sdf/: car_robot.sdf  excavator.sdf  excavator_model.sdf  excavator_model.urdf.rviz  manipulator_robot.sdf
robot_description/sdf/meshes/: arm1.dae  arm2.dae  base.dae  body.dae  shovel.dae
robot_description/worlds/: multi_robot_world.world
sensor_processing/: package.xml  setup.py
transport_control/: package.xml  setup.cfg  setup.py
