<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>A package for defining the robot world</description>
  <maintainer email="esubalewchekol6@gmail.com">esube</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
<depend>ros_gz_sim</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2run</exec_depend>
  

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
